--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ header {
   display: flex;
   padding: 0;
   margin: 16px;
+  width: auto;
 }
 
 header hi{
@@ -64,7 +65,7 @@ main {
   text-align: center;
   padding: 0;
   opacity: 0;
-  transform: translateX(-500px);
+  transform: translateX(-100%);
   transition: transform .2s, opacity .2s;
   pointer-events: none;
 }
@@ -299,12 +300,12 @@ main {
     transition-delay: .4s;
   }
   
-  .pc-menu {
+   .pc-menu {
     display: none;
   
   }
 
-  @media (min-width:600px) {
+  /* @media (min-width:600px) {
     .pc-menu {
       display: block;
       margin-left: auto;
@@ -333,4 +334,4 @@ main {
     }
   
   }
-
+ */
